--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,33 @@
 *.o
 *.obj
 
+# User-specific files
+*.suo
+*.user
+*.sln.docstates
+
+# Build results
+
+[Dd]ebug/
+[Rr]elease/
+x64/
+build/
+[Bb]in/
+[Oo]bj/
+
+# NuGet Packages
+*.nupkg
+# The packages folder can be ignored because of Package Restore
+**/packages/*
+# except build/, which is used as an MSBuild target.
+!**/packages/build/
+# Uncomment if necessary however generally it will be regenerated when needed
+#!**/packages/repositories.config
+
+# MSTest test Results
+[Tt]est[Rr]esult*/
+[Bb]uild[Ll]og.*
+
 # Precompiled Headers
 *.gch
 *.pch
@@ -27,3 +54,17 @@
 *.exe
 *.out
 *.app
+/ImageProcessing/ImageProcessing/bin/Debug/
+*.suo
+ImageProcessing/ImageProcessing/bin/Debug/ImageProcessing.exe.config
+\bin\
+
+# Visual Studio temp something
+.vs/
+
+# Windows image file caches
+Thumbs.db
+ehthumbs.db
+
+# Folder config file
+Desktop.ini
