--- a/ImageProcessing/ImageProcessing/App.config
+++ b/ImageProcessing/ImageProcessing/App.config
@@ -4,7 +4,7 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
     <appSettings>
-      <add key="InputFolder" value="../../../Input/"/>
-      <add key="OutputFolder" value="../../../Output/"/>
+      <add key="InputFolderName" value="Input"/>
+      <add key="OutputFolderName" value="Output"/>
     </appSettings>
 </configuration>
