--- a/ImageProcessing/ImageProcessing/ImageProcessing.csproj
+++ b/ImageProcessing/ImageProcessing/ImageProcessing.csproj
@@ -36,26 +36,26 @@
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
+    <Reference Include="System.Drawing" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Algorithms\BaseAlgorithm.cs" />
     <Compile Include="Algorithms\LaplaceOperator.cs" />
     <Compile Include="Algorithms\SobelOperator.cs" />
     <Compile Include="Algorithms\RobertsCross.cs" />
     <Compile Include="Algorithms\Canny.cs" />
     <Compile Include="Data\FileManager.cs" />
-    <Compile Include="Interfaces\IAlgorithm.cs" />
+    <Compile Include="Model\AlgorithmOutputData.cs" />
+    <Compile Include="Model\AlgorithmType.cs" />
+    <Compile Include="Model\OutputData.cs" />
+    <Compile Include="Model\InputData.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
