Kamil's part DONE

--- a/ImageProcessing/ImageProcessing/ImageProcessing.csproj
+++ b/ImageProcessing/ImageProcessing/ImageProcessing.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Model\AlgorithmOutputData.cs" />
     <Compile Include="Model\AlgorithmType.cs" />
     <Compile Include="Model\BitmapData.cs" />
+    <Compile Include="Model\LaplaceFilter.cs" />
     <Compile Include="Model\OutputData.cs" />
     <Compile Include="Model\InputData.cs" />
     <Compile Include="Program.cs" />
